[gd_scene load_steps=5 format=3 uid="uid://dwiu4cm7rlq0p"]

[ext_resource type="Script" uid="uid://bmjl8m7gyu3qj" path="res://src/HUD/HUD.gd" id="2"]
[ext_resource type="FontVariation" uid="uid://bawuiamdvgn6o" path="res://assets/fonts/bold_font.tres" id="2_llxr8"]
[ext_resource type="PackedScene" uid="uid://dx4e07rgnuhvp" path="res://src/Hearts/Heart.tscn" id="3_2vejy"]
[ext_resource type="Texture2D" uid="uid://d0imd2kydllrg" path="res://assets/sprites/collectibles/dollar_coin.png" id="3_llxr8"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Calendar" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Calendar"]
layout_mode = 0
offset_left = 1464.0
offset_top = 5.000002
offset_right = 1560.0
offset_bottom = 63.0
scale = Vector2(1.3547273, 1.8399999)

[node name="ColorRect" type="ColorRect" parent="Calendar/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.4172595, 0.45652163)
color = Color(0.8352941, 0.003921569, 0.007843138, 1)

[node name="Year" type="Label" parent="Calendar"]
layout_mode = 0
offset_left = 1498.0
offset_top = 6.0
offset_right = 1562.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(18.892157, 18.892157, 18.892157, 1)
theme_override_fonts/font = ExtResource("2_llxr8")
theme_override_font_sizes/font_size = 30
text = "2025"

[node name="Month" type="Label" parent="Calendar"]
layout_mode = 0
offset_left = 1465.0
offset_top = 40.0
offset_right = 1591.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0.8352941, 0.003921569, 0.007843138, 1)
theme_override_fonts/font = ExtResource("2_llxr8")
text = "JAN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer"]
texture_filter = 1
position = Vector2(43, 31)
scale = Vector2(2, 2)
texture = ExtResource("3_llxr8")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer"]
modulate = Color(0.65882355, 0, 0, 1)
texture_filter = 1
position = Vector2(43, 90)
scale = Vector2(2, 2)
texture = ExtResource("3_llxr8")

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HeartsContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer2"]
layout_mode = 2
size_flags_vertical = 4

[node name="Heart" parent="VBoxContainer/CenterContainer2/HeartsContainer" instance=ExtResource("3_2vejy")]
texture_filter = 1
position = Vector2(-176, 56)
scale = Vector2(0.6, 0.6)

[node name="Heart2" parent="VBoxContainer/CenterContainer2/HeartsContainer" instance=ExtResource("3_2vejy")]
texture_filter = 1
position = Vector2(-88, 56)
scale = Vector2(0.6, 0.6)

[node name="Heart3" parent="VBoxContainer/CenterContainer2/HeartsContainer" instance=ExtResource("3_2vejy")]
texture_filter = 1
position = Vector2(0, 56)
scale = Vector2(0.6, 0.6)

[node name="Heart4" parent="VBoxContainer/CenterContainer2/HeartsContainer" instance=ExtResource("3_2vejy")]
texture_filter = 1
position = Vector2(88, 56)
scale = Vector2(0.6, 0.6)

[node name="Heart5" parent="VBoxContainer/CenterContainer2/HeartsContainer" instance=ExtResource("3_2vejy")]
texture_filter = 1
position = Vector2(176, 56)
scale = Vector2(0.6, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CoinNumber" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/CoinNumber"]
layout_mode = 2
text = "      "

[node name="CoinNumberValue" type="Label" parent="VBoxContainer/VBoxContainer/CoinNumber"]
layout_mode = 2
text = "/"

[node name="NetWorth" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/NetWorth"]
layout_mode = 2
text = "      "

[node name="NetWorthValue" type="Label" parent="VBoxContainer/VBoxContainer/NetWorth"]
layout_mode = 2
text = "/"

[node name="DashCooldown" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/DashCooldown"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/VBoxContainer/DashCooldown"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="FadeinPane" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
